tests/instantiating/invalid/duplicate_in_the_groups_list/bus.fbd
main bus
	foo status
		groups = ["a", "a"]
